--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -398,6 +398,10 @@ address:last-child {
   height: 300px;
   width: 300px;
 }
+.tm-gallery-img:hover {
+  transform: scale(1.1);
+  transition: transform 0.3s ease;
+}
 
 .tm-gallery-title {
   font-size: 1.3rem;
