--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -361,6 +361,7 @@ address:last-child {
 
 .gallery-item:hover {
   transform: scale(1.02);
+  transition: transform 0.3s ease-in-out;
 }
 
 .gallery-item img {
@@ -479,10 +480,35 @@ address:last-child {
 .tm-gallery-img {
   height: 300px;
   width: 300px;
+  padding: 0;
+  margin: 0;
 }
-.tm-gallery-img:hover {
+
+.img-container:hover {
   transform: scale(1.02);
-  transition: transform 0.3s ease;
+  transition: transform 0.3s ease-in-out;
+}
+
+figure {
+  margin: 0;
+  padding: 0;
+  position: relative;
+}
+
+figcaption {
+  opacity: 0;
+  position: absolute;
+  bottom: 6px;
+  left: 0;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  padding: 10px;
+  text-align: center;
+}
+
+.gallery-item figcaption {
+  bottom: 0;
 }
 
 .tm-gallery-title {
