--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -461,7 +461,7 @@ address:last-child {
   margin-top: 26px;
   width: 100%;
   max-width: 280px;
-  padding: 0 14px;
+  padding: 0 38px;
 }
 
 .gallery-grid {
@@ -518,6 +518,25 @@ address:last-child {
 }
 
 /* Responsive adjustments */
+@media (max-width: 1192px) {
+  .gallery-grid {
+    border: 1px solid blue;
+    max-width: 976px;
+    margin: auto;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 155px);
+    gap: 26px;
+    grid-template-areas: 
+        "img1 img2 img3"
+      "img4 img2 img6"
+      "img4 img5 img6";
+  }
+
+  .gallery-container {
+    max-width: 976px;
+  }
+}
+
 @media (max-width: 768px) {
   .gallery-grid {
       grid-template-columns: 1fr;
@@ -575,6 +594,16 @@ address:last-child {
   .tm-section,
   .tm-container-inner {
     min-width: 840px;
+  }
+}
+
+@media (min-width: 992px) {
+  .tm-gallery-page,
+  .gallery-container,
+  .tm-section,
+  .tm-container-inner {
+    min-width: 840px;
+    max-width: 976px;
   }
 }
 
